--- a/AppreciationApp/AppreciationApp.Web.csproj
+++ b/AppreciationApp/AppreciationApp.Web.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
+    <PackageReference Include="System.Regex" Version="1.0.0" />
   </ItemGroup>
 
 
