--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "inversify": "^5.0.1",
+    "reflect-metadata": "^0.1.13",
     "vue": "^2.6.6",
     "vue-adal": "^1.3.1",
     "vue-class-component": "^6.0.0",
