--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,9 @@
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-typescript": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "typescript": "^3.2.1",
     "vue-template-compiler": "^2.5.21"
   }
