--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "file-loader": "^4.1.0",
     "inversify": "^5.0.1",
     "reflect-metadata": "^0.1.13",
+    "url-loader": "^2.1.0",
     "vue": "^2.6.6",
     "vue-adal": "^1.3.1",
     "vue-class-component": "^6.0.0",
